# examples

./: README.md
aiohttp-app/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
aiohttp-app/aiohttp_app/: __main__.py  dependencies.py  dtos.py  lifetime.py  main.py  routes.py  settings.py  tasks.py  tkq.py
aiohttp-app/tests/: conftest.py  test_handlers.py
fastapi-app/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
fastapi-app/fastapi_app/: __main__.py  dependencies.py  dtos.py  lifespan.py  lifetime.py  routes.py  settings.py  tasks.py  tkq.py  tkq_sched.py
fastapi-app/tests/: conftest.py  test_routes.py
