[tool.poetry]
name = "fastapi-app"
version = "0.1.0"
description = ""
authors = ["Pavel Kirilin <win10@list.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
taskiq = "^0"
taskiq-nats = "^0"
taskiq-redis = "^1"
taskiq-fastapi = "^0"
fastapi = "^0"
uvicorn = "^0"
psycopg = { version = "^3", extras = ["pool"] }
pydantic-settings = "^2.8.1"

[tool.poetry.group.lint.dependencies]
black = "^25"
isort = "^6"

[tool.poetry.group.test.dependencies]
pytest = "^8"
anyio = "^4"
pytest-env = "^1"
httpx = "^0"

[tool.poetry.group.dev.dependencies]
taskiq = { version = "^0", extras = ["reload"] }

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore:.*unclosed.*:ResourceWarning",
]
env = ["FASTAPI_APP_ENV=pytest"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
